deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysampleapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysampleapp
  template:
    metadata:
      labels:
        app: mysampleapp
    spec:
      containers:
      - name: mysampleapp-container
        image: abhidileep/dockerfile:latest
        ports:
        - containerPort: 80
