service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysampleapp-service
spec:
  selector:
    app: mysampleapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
