ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysampleapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - mysampleapp.kubeace.com
    secretName: mysampleapp.kubeace.com
  ingressClassName: nginx
  rules:
    - host: mysampleapp.kubeace.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mysampleapp-service
              port:
                number: 8080
